Repair bug that miss break in switch case of rendFilNodes function Modify the approach of recieve data to fix
Changes to be committed:
	modified:   css/index.css
	modified:   js/global.js
	modified:   js/index.js

--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,15 @@ li>details>aside {
 	font-weight: bold;
 }
 
+.filNodeValue>div {
+	width: 180px;
+}
+.filNodeValue>.address {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
 #curve {
 	margin: 0px auto;
 	display: -webkit-flex;
